--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="">
+    <meta name="description" content="prOwca PR newsletter">
     <meta name="author" content="prOwca">
     <!--<link rel="icon" href="../../favicon.ico">-->
 
@@ -39,32 +39,7 @@
                     <h3 class="masthead-brand">#prOwcaKejsy</h3>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="#">Newsletter</a></li>
                             <li><a href="http://prowca.wordpress.com">Blog prOwca</a></li>
-                            <li>
-                                <a href="https://twitter.com/share" class="twitter-share-button"
-                                   data-count="none">Tweet</a>
-                                <script>!function (d, s, id) {
-                                    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                                    if (!d.getElementById(id)) {
-                                        js = d.createElement(s);
-                                        js.id = id;
-                                        js.src = p + '://platform.twitter.com/widgets.js';
-                                        fjs.parentNode.insertBefore(js, fjs);
-                                    }
-                                }(document, 'script', 'twitter-wjs');</script>
-                            </li>
-                            <li>
-                                <script>(function (d, s, id) {
-                                    var js, fjs = d.getElementsByTagName(s)[0];
-                                    if (d.getElementById(id)) return;
-                                    js = d.createElement(s);
-                                    js.id = id;
-                                    js.src = "//connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v2.4";
-                                    fjs.parentNode.insertBefore(js, fjs);
-                                }(document, 'script', 'facebook-jssdk'));</script>
-                                <div class="fb-share-button" data-href="http://prowca.pl" data-layout="button"></div>
-                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -74,17 +49,29 @@
                 <h1 class="cover-heading">Zaprenumeruj Kejsy!</h1>
 
                 <p class="lead">
+                    <a href="https://twitter.com/share" class="twitter-share-button"
+                       data-count="none">Tweet</a>
+
+                <div class="fb-share-button" data-href="http://prowca.pl" data-layout="button"></div>
+                </p>
+
+                <p class="lead">
                     Nie pozwól aby ominął Cię interesujący case i zapisz się do newslettera już teraz!
                 </p>
 
                 <p class="lead">
 
-                <form class="form-inline">
+                <form class="form-inline" method="post"
+                      action="https://app.freshmail.com/main.php?moduleName=fm_subscribers&amp;action=add_subscriber">
+                    <input type="hidden" name="subscribers_list_hash" value="3pj9svq2t4"/>
+
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Twoje imię">
-                            <input type="email" class="form-control" id="email" placeholder="twoj@email.pl">
-                            <a href="#" class="btn btn-md btn-default">Zapisz mnie!</a>
+                            <input name="freshmail_name" type="text" class="form-control" id="name"
+                                   placeholder="Twoje imię">
+                            <input name="freshmail_email" type="email" class="form-control" id="email"
+                                   placeholder="twój@email.pl">
+                            <input type="submit" class="btn btn-md btn-default" value="Zapisz mnie!"/>
                         </div>
                     </div>
                 </form>
@@ -117,5 +104,25 @@
 <script src="assets/lib/bootstrap/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+
+<script>(function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "//connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v2.4";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<script>!function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+    if (!d.getElementById(id)) {
+        js = d.createElement(s);
+        js.id = id;
+        js.src = p + '://platform.twitter.com/widgets.js';
+        fjs.parentNode.insertBefore(js, fjs);
+    }
+}(document, 'script', 'twitter-wjs');</script>
+
 </body>
 </html>
