inline placement for social buttons

--- a/index.html
+++ b/index.html
@@ -49,10 +49,15 @@
                 <h1 class="cover-heading">Zaprenumeruj Kejsy!</h1>
 
                 <p class="lead">
-                    <a href="https://twitter.com/share" class="twitter-share-button"
-                       data-count="none">Tweet</a>
-
-                <div class="fb-share-button" data-href="http://prowca.pl" data-layout="button"></div>
+                <ul class="list-inline">
+                    <li>
+                        <a href="https://twitter.com/share" class="twitter-share-button"
+                           data-count="none">Tweet</a>
+                    </li>
+                    <li>
+                        <div class="fb-share-button" data-href="http://prowca.pl" data-layout="button"></div>
+                    </li>
+                </ul>
                 </p>
 
                 <p class="lead">
