--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="lead">
                 <ul class="list-inline">
                     <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button"
+                        <a href="https://twitter.com/share?url=http%3A%2F%2Fprowca.pl" class="twitter-share-button"
                            data-count="none">Tweet</a>
                     </li>
                     <li>
